force-app/main/default/objects/Prescription__c/Prescription__c.object-meta.xml
<CustomObject>
    <description>Hospital Management System object for Prescription.</description>
    <label>Prescription</label>
    <nameField>
        <displayFormat>RX-{00000}</displayFormat>
        <label>Prescription Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prescriptions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>