force-app/main/default/objects/Prescription__c/fields/Medical_Record__c.field-meta.xml
<CustomField>
    <fullName>Medical_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medical Record</label>
    <referenceTo>Medical_Record__c</referenceTo>
    <relationshipLabel>Prescriptions</relationshipLabel>
    <relationshipName>Prescriptions</relationshipName>
    <type>Lookup</type>
</CustomField>