force-app/main/default/objects/Prescription__c/fields/Total_Medicine_Bill__c.field-meta.xml
<CustomField>
    <fullName>Total_Medicine_Bill__c</fullName>
    <label>Total Medicine Bill</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>